# xf86-input-wacom

./: configure.ac
man/: Makefile.am  isdv4-serial-debugger.man  isdv4-serial-inputattach.man
